Fixed window collapsing, dragging it by the user, added a header, resized the window

--- a/src/main/webapp/VAADIN/themes/vaadinwindow/styles.scss
+++ b/src/main/webapp/VAADIN/themes/vaadinwindow/styles.scss
@@ -34,7 +34,7 @@
     }
     .v-window 
     {
-        height : 460px;
+        height : 500px;
         width  : 680px;
     }
 }
